--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,7 @@ body {
 .form-control {
   display: flex;
   width: 100%;
+  align-items: center;
   justify-content: space-between;
   color: #eee;
   font-size: 1.1rem;
@@ -161,7 +162,7 @@ body {
 }
 
 .length {
-  margin-top: 1.4rem;
+  margin: 1.4rem 0;
 }
 .length label {
   padding: 0;
@@ -172,9 +173,48 @@ body {
   font-size: 1.2rem;
   border-radius: 3px;
   background-color: rgba(255, 255, 255, 0.356);
+  width: 70px;
 }
 .length input::-webkit-outer-spin-button, .length input::-webkit-inner-spin-button {
   /* display: none; <- Crashes Chrome on hover */
   -webkit-appearance: none;
   margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=checkbox] {
+  position: absolute;
+  top: 0;
+  left: -9999px;
+  visibility: hidden;
+}
+
+input + label {
+  display: inline-flex;
+  align-items: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+input + label::after {
+  content: "";
+  display: inline-block;
+  margin-left: auto;
+  width: 1em;
+  height: 1em;
+  flex-shrink: 0;
+  flex-grow: 0;
+  border: 1px solid #adb5bd;
+  border-radius: 0.25em;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+
+input:checked + label::after {
+  border-color: #0b76ef;
+  background-color: #0b76ef;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
