--- a/scss/style.scss
+++ b/scss/style.scss
@@ -61,6 +61,7 @@ body{
 .form-control{
     display: flex;
     width: 100%;
+    align-items: center;
     justify-content: space-between;
     color: #eee;
     font-size: 1.1rem;
@@ -86,7 +87,7 @@ body{
 }
 
 .length{
-    margin-top: 1.4rem;
+    margin: 1.4rem 0;
     label{
         padding: 0;
     }
@@ -96,6 +97,7 @@ body{
         font-size: 1.2rem;
         border-radius: 3px;
         background-color: rgba(255, 255, 255, 0.356);
+        width: 70px;
         &::-webkit-outer-spin-button,
         &::-webkit-inner-spin-button {
         /* display: none; <- Crashes Chrome on hover */
@@ -104,3 +106,39 @@ body{
     }
     }
 }
+
+input[type="checkbox"]{
+    position: absolute;
+    top: 0;
+    left: -9999px;
+    visibility: hidden;
+}
+
+input+label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+  }
+input+label::after {
+    content: '';
+    display: inline-block;
+    margin-left: auto;
+    width: 1em;
+    height: 1em;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 1px solid #adb5bd;
+    border-radius: 0.25em;
+    margin-right: 0.5em;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+  }
+
+  input:checked+label::after {
+    border-color: #0b76ef;
+    background-color: #0b76ef;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+  }
+
+  
